Fixed issue with cards not overlapping on card list div

--- a/src/app/game-room/game-room.component.css
+++ b/src/app/game-room/game-room.component.css
@@ -3,15 +3,24 @@
     background-color: darkgreen;
 }
 .playing-area{
-    height: 70vh;
+    height: 79vh;
     background-color:aqua;
-}
-.card-list{
-    height: 30vh;
-    background-color: yellow;
 }
 .header{
     height: 5vh;
     background-color:darkblue;
 }
-
+.card-list{ 
+    height: 21vh;
+    background-color: yellow;  
+}
+.card-list-container {
+    display: flex;     
+}
+.card-container {
+    flex: 1 0 0;
+    overflow-x: hidden;
+}
+.card-container:last-child {
+    flex: 0 0 auto;
+}
